[package]
name = "neodb"
version = "0.1.0-alpha.2"
edition = "2024"
description = "A fast, lightweight key-value database written in Rust. (Work in Progress)"
license = "MIT"
repository = "https://github.com/eyukselen/neodb-rust"
readme = "README.md"
keywords = ["database", "key-value", "wip"]
categories = ["database-implementations"]
documentation = "https://docs.rs/neodb"

[lib]
name = "neodb"
path = "src/lib.rs"

[dependencies]

[dev-dependencies]
criterion = "0.8.2"

[[bench]]
name = "benchmark1"
path = "benches/benchmark1.rs"
harness = true


